<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeNote"
        style="@style/HeadingTextView"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeExample"
        android:textAlignment="center"
        style="@style/MainTextView"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dividersColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <EditText
            android:id="@+id/dataText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="10"
            style="@style/ThreeDigitsEdit"
            android:textAlignment="viewEnd"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            style="@style/MainTextView"/>
        <EditText
            android:id="@+id/dataText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="30"
            style="@style/ThreeDigitsEdit"
            android:textAlignment="viewStart"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dividersColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:onClick="onSaveClick"
            style="@style/TextButton"/>
        <Button
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:onClick="onCancelClick"
            style="@style/CancelButton"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/delete"
        android:onClick="onDeleteClick"
        style="@style/DeleteButton"/>

</LinearLayout>