<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <fragment
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:name="com.example.lifelinefinally.ToolbarFragment"
        tools:layout="@layout/fragment_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/surname"
                style="@style/MainTextView"/>
            <EditText
                android:id="@+id/surnameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surnameExample"
                style="@style/mainEditText"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/name"
                style="@style/MainTextView"/>
            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameExample"
                style="@style/mainEditText"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/patronymic"
                style="@style/MainTextView"/>
            <EditText
                android:id="@+id/patronymicEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patronymicExample"
                style="@style/mainEditText"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/birth_date"
                style="@style/MainTextView"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:gravity="center">
                <NumberPicker
                    android:id="@+id/dayPicker"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    />
                <NumberPicker
                    android:id="@+id/monthPicker"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    />
                <NumberPicker
                    android:id="@+id/yearPicker"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/gender"
                style="@style/MainTextView"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    style="@style/AdditionalTextView"/>
                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:buttonTint="@color/lightBlue"
                    android:checked="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    style="@style/AdditionalTextView"/>
                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:buttonTint="@color/lightBlue"
                    android:checked="false"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="Неопредлённый(в современном мире живем)"
                style="@style/AdditionalTextView"/>
            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:buttonTint="@color/lightBlue"
                android:checked="false"/>
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <Button
                    android:onClick="onSaveProfileClick"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:text="@string/save"
                    style="@style/TextButton"/>
                <Button
                    android:onClick="onCancelProfileEditClick"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    style="@style/CancelButton"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
        </LinearLayout>
    </ScrollView>
    <fragment
        android:id="@+id/sections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:name="com.example.lifelinefinally.SectionsFragment"
        tools:layout="@layout/fragment_sections"/>

</LinearLayout>