<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <fragment
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:name="com.example.lifelinefinally.ToolbarFragment"
        tools:layout="@layout/fragment_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cabinet"
                style="@style/HeadingTextView" />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">
                <View
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:background="@color/lightBlue"
                    android:padding="20dp"
                    android:layout_gravity="center"/>
                <View
                    android:layout_width="15dp"
                    android:layout_height="match_parent"/>
                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/dividersColor"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/surnameExample"
                        android:lines="1"
                        android:paddingEnd="10dp"
                        style="@style/MainTextView"/>
                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:text="@string/full_nameExample"
                        android:paddingEnd="10dp"
                        style="@style/AdditionalTextView"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/dividersColor"/>
                    <TextView
                        android:id="@+id/birth_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:paddingEnd="10dp"
                        android:text="@string/birth_dateExample"
                        style="@style/AdditionalTextView"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/dividersColor"/>
                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maleExample"
                        style="@style/AdditionalTextView"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/dividersColor"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:paddingEnd="10dp"
                        android:text="@string/last_visitExample"
                        style="@style/AdditionalTextView"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <Button
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="#E21515"
                android:text="@string/emergency"
                android:textColor="@color/backgroundColor"
                android:paddingEnd="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <Button
                android:onClick="onEditClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editProfile"
                style="@style/TextButton"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
        </LinearLayout>
    </ScrollView>
    <fragment
        android:id="@+id/sections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:name="com.example.lifelinefinally.SectionsFragment"
        tools:layout="@layout/fragment_sections"/>
</LinearLayout>