<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dividersColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filterItemExample"
        style="@style/HeadingTextView"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dividersColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whichSort"
        style="@style/MainTextView"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividersColor"/>
    <ListView
        android:id="@+id/sortTypeList"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dividersColor"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dividersColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whichResult"
        style="@style/MainTextView"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividersColor"/>
    <ListView
        android:id="@+id/resultsTypeList"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dividersColor"/>
</LinearLayout>