<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <fragment
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:name="com.example.lifelinefinally.ToolbarFragment"
        tools:layout="@layout/fragment_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/pulse"
                android:onClick="toPulseClick"
                style="@style/TextButton"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <fragment
                android:id="@+id/graph_pulse"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:name="com.example.lifelinefinally.GraphPulseFragment"
                tools:layout="@layout/fragment_graph_pulse"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/pressure"
                android:onClick="toPressureClick"
                style="@style/TextButton"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <fragment
                android:id="@+id/graph_pressure"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:name="com.example.lifelinefinally.GraphPressureFragment"
                tools:layout="@layout/fragment_graph_pressure"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/temperature"
                android:onClick="toTemperatureClick"
                style="@style/TextButton"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <fragment
                android:id="@+id/graph_temperature"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:name="com.example.lifelinefinally.GraphTemperatureFragment"
                tools:layout="@layout/fragment_graph_temperature"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sleepTime"
                android:onClick="toSleepClick"
                style="@style/TextButton"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <fragment
                android:id="@+id/graph_sleep"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:name="com.example.lifelinefinally.GraphSleepFragment"
                tools:layout="@layout/fragment_graph_sleep"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/report"
                android:onClick="toReportClick"
                style="@style/TextButton"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividersColor"/>
        </LinearLayout>
        
    </ScrollView>
    <fragment
        android:id="@+id/sections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:name="com.example.lifelinefinally.SectionsFragment"
        tools:layout="@layout/fragment_sections"/>
</LinearLayout>